--- a/index.html
+++ b/index.html
@@ -5,5 +5,7 @@
     </head>
     <body>
 <h1> Om oss</h1>
+        <h2>Jenta fra Bergen. </h2>
+        <p>Jeg liker regn og sol. Om det er både sol og regn er jeg veldig glad, men jeg liker ikke vind.</p>
     </body>
 </html>
