--- a/index.html
+++ b/index.html
@@ -5,5 +5,6 @@
     </head>
     <body>
 <h1> Om oss</h1>
+<h2> Rajaa fra Oslo. en søt jenta som heter Dina, går på fjere trinn, hun er veldig omsorgsfull og hjelpsom jenta, kjempe snill og hyggelig.</h2>
     </body>
 </html>
