--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 <h1> Om oss</h1>
         <h2>Jenta fra Bergen. </h2>
         <p>Jeg liker regn og sol. Om det er både sol og regn er jeg veldig glad, men jeg liker ikke vind.</p>
-    </body>
+        <h2> Rajaa fra Oslo</h2>
+        <p> jeg liker sommer mer enn vinter og er veldig glad i regn vær enn snø </p>
+    
     </body>
 </html>
