--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <p>Jeg bor på Holmlia og er 19 år gammel</p>
         
         <h3> Rajaa fra Oslo</h3>
-        <p> jeg liker sommer mer enn vinter og er veldig glad i regn vær enn snø </p>
+        <p> jeg liker sommer mer enn vinter og er veldig glad i regn vær enn snø..... </p>
     
     </body>
 </html>
