--- a/index.html
+++ b/index.html
@@ -6,18 +6,7 @@
     <body>
 <h2> Om oss</h2>
         <h3>Jenta fra Bergen. </h3>
-<<<<<<< HEAD
-=======
-=======
-<<<<<<< HEAD
->>>>>>> refs/remotes/origin/main
-        <h2>Jenta fra Bergen. </h2>
-=======
-        
->>>>>>> refs/remotes/origin/main
->>>>>>> refs/remotes/origin/main
->>>>>>> refs/remotes/origin/main
-        <p>Jeg liker regn og sol. Om det er både sol og regn er jeg veldig glad, men jeg liker ikke vind.</p>
+<p>det er både sol og regn er jeg veldig glad, men jeg liker ikke vind.</p>
         
         <h3>Nour</h3>
         <p>Jeg bor på Holmlia og er 19 år gammel</p>
