--- a/index.html
+++ b/index.html
@@ -15,6 +15,6 @@
         <h3> Rajaa fra Oslo</h3>
         <p> jeg liker sommer mer enn vinter og er veldig glad i regn vær enn snø..... </p>
 
-    
+        <p>dette er i en branch</p>    
     </body>
 </html>
